# njit-alg-scratch

./: .flake8  .gitignore  pyproject.toml  requirements.txt  setup.py
notebooks/: C610_All_Lectures_Code.ipynb  merge-sort-example.ipynb  rust.ipynb  shawn.cicoria-CS610.j31-assignment 1.ipynb
notebooks/lectures/: Lecture-1.ipynb  Lecture-2.1.ipynb  Lecture-3.ipynb  Lecture-4.ipynb  Lecture-5.ipynb  Lecture-7 (1).ipynb  Lecture-7-scratch.py
notebooks/project/: Untitled.ipynb  a-recursion-work.ipynb  m1.py  milestone1.ipynb  mini-project.ipynb  shawn-cicoria.txt  shawn-cicoria_3x3.txt  test_m1.py
notebooks/project2/: Untitled.ipynb  ko.py  minproject2-scratch.ipynb  minproject2-scratch.py  notes.md  project2_work.py  shawn.cicoria-Project2.ipynb  shawn.cicoria-project-2.milestone-1.md  test_foobar.py  test_miniproject2full.py  test_minproject.py  test_scratch-script.py
notebooks/project2/data/: sample.txt
notebooks/project2/samples/: kosaraju.py  kosaraju_python_3 (1).ipynb
notebooks/project2/src-archives/: old_project2.py
notebooks/work/: Assignment-2.ipynb  Assignment-3.ipynb  Assignment-4-Solutions.ipynb  Assignment-4.ipynb  Assignment-6.ipynb  Untitled.ipynb  Untitled1.ipynb  hw2.java  hw3.py  hw4.4.py  hw4.py  hw42.py  hw4z.py  shawn-cicoria-6.ipynb  shawn.cicoria-Assignment-2.1.ipynb  shawn.cicoria-Assignment-3.ipynb  shawn.cicoria-Assignment-4.ipynb  shawn.cicoria-Assignment-5.gyp  shawn.cicoria-Assignment-5.ipynb  test_hw5.py  test_hw6.py
notebooks/work/assignment solutions/: Assignment-1-Solutions.ipynb  (+4 more)
trial/Archive/: shawn.cicoria-Project2.ipynb
(+13 files in other folders)
