[tool.poetry]
name = "njit-alg-scratch"
version = "0.1.0"
description = "NJIT algorithms course"
authors = ["Shawn Cicoria <github@cicoria.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyterlab = "^2.1.3"
matplotlib = "^3.2.1"
numpy = "^1.18.4"
scikit-learn = "^0.23.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
